--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
         </div>
 
-        <h1>
+        <p><a href="https://packagist.org/packages/alorel/alo-framework"><img src="https://poser.pugx.org/alorel/alo-framework/license" alt="License"></a> <a href="https://packagist.org/packages/alorel/alo-framework"><img src="https://poser.pugx.org/alorel/alo-framework/version" alt="Latest Stable Version"></a> <a href="//packagist.org/packages/alorel/alo-framework"><img src="https://poser.pugx.org/alorel/alo-framework/v/unstable" alt="Latest Unstable Version"></a>
+<a href="https://packagist.org/packages/alorel/alo-framework"><img src="https://poser.pugx.org/alorel/alo-framework/downloads" alt="Total Downloads"></a> <a href="https://packagist.org/packages/alorel/alo-framework"><img src="https://poser.pugx.org/alorel/alo-framework/d/monthly" alt="Monthly Downloads"></a> <a href="https://packagist.org/packages/phpunit/phpunit"><img src="https://poser.pugx.org/alorel/alo-framework/d/daily" alt="Daily Downloads"></a>
+<a href="https://alo-framework.readthedocs.org"><img src="https://readthedocs.org/projects/alo-framework/badge/?version=latest" alt="Docs"></a></p>
+
+<p>View on: <a href="https://packagist.org/packages/alorel/alo-framework">Packagist</a> | <a href="https://alo-framework.readthedocs.org">ReadTheDocs</a></p>
+
+<hr>
+
+<h1>
 <a id="what-is-this" class="anchor" href="#what-is-this" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is this?</h1>
 
 <p>AloFramework is an incredibly lightweight and flexible MVC framework for PHP 5.3+. It has a lot of built-in functionality including but not limited to:</p>
