--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Alo-framework by Alorel</title>
+    <title>AloFramework by Alorel</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
@@ -31,7 +31,7 @@
 
       <section>
         <div id="title">
-          <h1>Alo-framework</h1>
+          <h1>AloFramework</h1>
           <p>AloFramework is an incredibly lightweight and flexible MVC framework for PHP 5.4+</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Alorel">Alorel</a></span>
@@ -55,7 +55,7 @@
 <li>
 <a href="#structure">Structure</a> [<a href="#general">General</a> | <a href="#namespaces">Namespaces</a>] </li>
 <li>
-<a href="#workflow">Workflow</a> [<a href="#main-concept">Main Concept</a> | <a href="#the-global-alo-class">The global Alo class</a> <a href="#controllers">Controllers</a> | <a href="#views">Views</a>]</li>
+<a href="#workflow">Workflow</a> [<a href="#main-concept">Main Concept</a> | <a href="#the-global-alo-class">The global Alo class</a> | <a href="#controllers">Controllers</a> | <a href="#views">Views</a>]</li>
 <li><a href="#routing">Routing</a></li>
 <li><a href="#logging">Logging</a></li>
 <li><a href="#initial-setup">Initial setup</a></li>
