Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section>
         <div id="title">
           <h1>AloFramework</h1>
-          <p>AloFramework is an incredibly lightweight and flexible MVC framework for PHP 5.4+</p>
+          <p>An incredibly lightweight and flexible MVC framework for PHP 5.4</p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/Alorel">Alorel</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
