--- a/src/sys/error/403.html
+++ b/src/sys/error/403.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>403 - Forbidden</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-<span>You do not have access this page</span>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>403 - Forbidden</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><span>You do not have access this page</span></body></html>
