--- a/src/sys/error/404.html
+++ b/src/sys/error/404.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>404 - not found</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-<span>The page cannot be found</span>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>404 - not found</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><span>The page cannot be found</span></body></html>
