--- a/src/sys/error/503.html
+++ b/src/sys/error/503.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>503 - Service Unavailable</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-<span>The server is currently unavailable (because it is overloaded or down for maintenance).</span>
-</body>
-</html>
+<!DOCTYPE html><html><head><title>503 - Service Unavailable</title><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"></head><body><span>The server is currently unavailable (because it is overloaded or down for maintenance).</span></body></html>
